chamber/styles/small.css
* {
	margin: 0;
	padding: 0;
}

:root {
    --Dark-Purple: rgb(23, 17, 35);
    --Russian-Violet: rgb(55, 34, 72);
    --Delft-Blue: rgb(65, 71, 112);
    --Powder-Blue: rgb(160, 185, 207);
    --Thistle: rgb(226, 207, 234);

}

/* header {
    background-color: var(--Russian-Violet);
    color: #eee;
    text-align: center;
    font-family: Shadows Into Light Two, Helvetica, sans-serif;
    font-weight: bolder;
    display: flex;
    justify-content: space-between;
    align-items: center;
} */

header img {
    margin: 10px;
    /* width: 50px;
    height: auto; */
    border-radius: 5px;  
    padding: 1rem;
}

.head-content {
    background-color: var(--Russian-Violet);
    color: #eee;
    text-align: center;
    font-family: Shadows Into Light Two, Helvetica, sans-serif;
    font-weight: bolder;
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-size: x-large;
    display: flex;
    align-items: center;
    gap: 10px;
}

#menu {
	display: block;
	font-size: 2rem;
	font-weight: 700;
	text-decoration: none;
	padding: .5rem .75rem;
	background-color: var(--Russian-Violet);
	color: #000;
    position: absolute;
	top: 1rem;
	right: 1rem;
}

#menu::before {
	content: "≡";
    color: #fff;
}

#menu.show::before {
	content: "X";
}

nav {
	background-color: var(--Russian-Violet);
    font-family: Shadows Into Light Two, Helvetica, sans-serif;
}
.navigation {
	list-style: none;
}

.navigation li {
	display: none;
}
.navigation a {
	display: block;
	padding: 0.75rem 1rem;
	text-align: center;
	text-decoration: none;
	color: #fff;
	font-weight: 700;
	transition: 0.5s;
	font-size: clamp(1.5rem, 2vmin, 1.5rem);
}

.navigation a:hover, .navigation a:active {
	color: var(--Powder-Blue);
	background-color: black;
}

.show li {
	display: block;
}

h1 {
    font-family: Shadows Into Light Two, Helvetica, sans-serif;
    text-align: center;
    font-weight: bolder;
    font-size: 60px;
}
.menu {
	margin: 1rem auto;
	border-radius: 8px;
	padding: 0.5rem;

	text-align: center;
}

.menu button {
    border-radius: 8px;
	padding: 1rem;
	font-weight: 700;
    font-family: Shadows Into Light Two, Helvetica, sans-serif;
}

.menu button:hover {
    background-color: var(--Thistle);
}

.grid {
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
	gap: 10px;
	justify-content: center;
    
}

.card {
    display: grid;
    gap: 1rem;
    padding: 1rem;
    place-items: center;
}

.member-card {
    text-align: center;
    border: 2px solid black;
    border-radius: 8px;
    margin: 1rem;
    background-color: var(--Thistle);
    box-shadow: 2px 2px 10px rgba(0,0,0,0.1); 
    width: 450px;
    height: 475px;
}

.member-card h2 {
    font-family: Cinzel, Calibri, sans-serif;
    font-weight: bolder;
    font-size: xx-large;
    padding: 10px;
    background-color: var(--Delft-Blue);
    
}

.member-card img {
    width: 400px;
    height: 250px;
    padding: 5px;
}

.member-card p {
    font-family: Cinzel, Calibri, sans-serif;
    font-size: larger;
    font-weight: bolder;
    padding: 2px;
}

.list {
    display: block;
    width: 100%;
    margin-left: 10px;
    display: table;
    width: 100%;
    border-collapse: collapse;
  }
  
  .list .member-card {
    display: table-row;
    border: none;
    background: none;
    box-shadow: none;
    padding: 0;
  }
  
  .list .member-card h2,
  .list .member-card p {
    display: table-cell;
    padding: 10px;
    border: 1px solid rgba(0, 0, 0, 0.2);
    text-align: left;
    color: #000;
    font-size: 1rem;
  }
  
  .list .member-card img {
    display: none;
  }
  
  .list .member-card h2 {
    font-weight: bold;
  }
  
  .list .member-card a {
    text-decoration: underline;
    color: var(--olive);
  }
  
  .list .member-card:nth-child(even) {
    background-color: var(--Powder-Blue);
  }

footer {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    font-family: Shadows Into Light Two, Helvetica, sans-serif;
    font-size: x-large;
    background: var(--Russian-Violet);
    padding: 2rem;
    text-align: center;
    color: #fff;
    text-decoration: none;
}

.bold {
    font-weight: bolder;
    padding-bottom: 10px;
}

.trademark,
.socials {
    padding-top: 30px;
}

/* @media only screen and (max-width: 20em) {
    .member-card {
        grid-template-columns: 1fr;
    }
} */

